completed code for rest of apis
