# services/theatre/theatre-service/src/main/java/com/bookmy/theatres/controller/ShowsController.java
@@ -1,13 +1,16 @@
 package com.bookmy.theatres.controller;
 
-import com.bookmy.theatres.service.TheatreService;
+import com.bookmy.theatres.service.ShowService;
 import com.bookmy.theatres.spec.api.ShowsApi;
+import com.bookmy.theatres.spec.api.TheatresApi;
+import com.bookmy.theatres.spec.model.Show;
 import com.bookmy.theatres.spec.model.Theatre;
 import com.bookmy.theatres.spec.model.UpdateShowRequest;
 import java.time.LocalDate;
 import java.util.Collection;
 import java.util.List;
 import javax.validation.Valid;
+import javax.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.ResponseEntity;
@@ -19,18 +22,21 @@ import org.springframework.web.bind.annotation.RestController;
 @Validated
 @RestController
 @RequiredArgsConstructor
-public class ShowsController implements ShowsApi {
+public class ShowsController implements ShowsApi, TheatresApi {
 
-    private final TheatreService theatreService;
+    private final ShowService showService;
 
     @Override
-    public ResponseEntity<List<Theatre>> createShows(UpdateShowRequest updateShowRequest) {
-        return null;
+    public ResponseEntity<Show> createShows(UpdateShowRequest updateShowRequest) {
+        Show show = showService.createShow(updateShowRequest);
+        return ResponseEntity.ok(show);
     }
 
     @Override
     public ResponseEntity<Void> deleteShow(Integer showId) {
-        return null;
+        showService.deleteShow(showId);
+        Void voidval=null;
+        return ResponseEntity.ok(voidval);
     }
 
     @Override
@@ -38,13 +44,14 @@ public class ShowsController implements ShowsApi {
         @PathVariable("movieName") String movieName,
         @Valid @RequestParam(value = "date", required = false) @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate date,
         @Valid @RequestParam(value = "city", required = false) String city) {
-        final Collection<Theatre> showsByCityDateAndMovie = theatreService.getShowsByCityDateAndMovie(
+        final Collection<Theatre> showsByCityDateAndMovie = showService.getShowsByCityDateAndMovie(
             city, date, movieName);
         return ResponseEntity.ok(List.copyOf(showsByCityDateAndMovie));
     }
 
     @Override
-    public ResponseEntity<Void> updateShow(UpdateShowRequest updateShowRequest) {
-        return null;
+    public ResponseEntity<Show> updateShow(UpdateShowRequest updateShowRequest) {
+        Show show = showService.updateShow(updateShowRequest);
+        return ResponseEntity.ok(show);
     }
 }
